// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-text prop 1`] = `
<div class="zv-search zv-search--show-action">
  <div class="zv-search__content zv-search__content--square">
    <div class="zv-cell zv-cell--borderless zv-field">
      <div class="zv-field__left-icon"><i class="zv-icon zv-icon-search">
          <!----></i></div>
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="search" class="zv-field__control"></div>
      </div>
    </div>
  </div>
  <div role="button" tabindex="0" class="zv-search__action">Custom Text</div>
</div>
`;

exports[`label slot 1`] = `
<div class="zv-search">
  <div class="zv-search__content zv-search__content--square">
    <div class="zv-search__label">Custom Label</div>
    <div class="zv-cell zv-cell--borderless zv-field">
      <div class="zv-field__left-icon"><i class="zv-icon zv-icon-search">
          <!----></i></div>
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="search" class="zv-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left slot 1`] = `
<div class="zv-search">Custom Left Content<div class="zv-search__content zv-search__content--square">
    <div class="zv-cell zv-cell--borderless zv-field">
      <div class="zv-field__left-icon"><i class="zv-icon zv-icon-search">
          <!----></i></div>
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="search" class="zv-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`left-icon prop 1`] = `
<div class="zv-search">
  <div class="zv-search__content zv-search__content--square">
    <div class="zv-cell zv-cell--borderless zv-field">
      <div class="zv-field__left-icon"><i class="zv-icon zv-icon-setting-o">
          <!----></i></div>
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="search" class="zv-field__control"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon prop 1`] = `
<div class="zv-search">
  <div class="zv-search__content zv-search__content--square">
    <div class="zv-cell zv-cell--borderless zv-field">
      <div class="zv-field__left-icon"><i class="zv-icon zv-icon-search">
          <!----></i></div>
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="search" class="zv-field__control">
          <div class="zv-field__right-icon"><i class="zv-icon zv-icon-setting-o">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`right-icon slot 1`] = `
<div class="zv-search">
  <div class="zv-search__content zv-search__content--square">
    <div class="zv-cell zv-cell--borderless zv-field">
      <div class="zv-field__left-icon"><i class="zv-icon zv-icon-search">
          <!----></i></div>
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="search" class="zv-field__control">
          <div class="zv-field__right-icon">Custom Right Icon</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
